<resources>
    <string name="app_name">MySportickAppDev43</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="field_change_nick">The field for changing the users nickname.</string>
    <string name="field_change_height">The field for changing the height of the user.</string>
    <string name="field_change_weight">The field for changing the weight of the user.</string>
    <string name="field_change_birthday">Field for changing the date of birth of the user.</string>
    <string name="string_start_run">Start run</string>

    <string name="have_nice_day">Have a nice day!</string>
    <string name="choose_image_for_the_icon">Choose an image for the icon</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account">Create account</string>
    <string name="have_an_account">Have an account?</string>
    <string name="sing_in">Sing in</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="confirm_and_contine">Confirm and Continue</string>
    <string name="confirm_password">confirm password</string>
    <string name="need_a_app_account">Need a App account?</string>
    <string name="account_creation">Account creation</string>
    <string name="log_into_account">log into account</string>
    <string name="weight">Weight</string>
    <string name="kg">kg</string>
    <string name="to_do">To do</string>
    <string name="alories">Сalories</string>
    <string name="cilocal">Cilocal</string>
    <string name="ccal">ccal</string>
    <string name="km">km</string>
    <string name="your_exercise">Your Exercise</string>
    <string name="your_event">Your Event</string>
    <string name="create_exercise">Create Exercise</string>
    <string name="exercise_name">exercise name</string>
    <string name="red">red</string>
    <string name="choose_the_color_you_need">Сhoose a color for the icon</string>
    <string name="change_color">change color</string>
    <string name="navigation">Navigation</string>
    <string name="change_icon">change icon</string>
    <string name="how_many_sets_do_you_need_to_complete">How many sets do you need to complete?</string>
    <string name="number_of_approaches">Number of approaches</string>
    <string name="enter_the_number_of_repetitions_in_one_set">Enter the number of repetitions in one set</string>
    <string name="number_of_repetitions">number of repetitions</string>
    <string name="look">look</string>
    <string name="create_exec">create exec</string>
    <string name="current_statistics">Current statistics</string>
    <string name="how_many_reps_have_you_done_in_the_current_set">How many reps have you done in the current set?</string>
    <string name="save">save changes</string>
    <string name="how_many_reps_do_you_want_to_complete_this_day">How many reps do you want to complete this day?</string>
    <string name="daily_task">Daily task</string>
    <string name="i_made_an_approach">i made an approach</string>
    <string name="done">done</string>
    <string name="settings">Settings</string>
    <string name="create_event">Create event</string>
    <string name="user_nick">User nick</string>
    <string name="save_profile">save profile</string>
    <string name="height">Height</string>
    <string name="birthday">Birthday</string>
    <string name="edit_profile">Edit profile</string>
    <string name="add">add</string>
    <string name="delete_exercise">Delete exercise</string>
    <string name="hello">Hello,</string>
    <string name="age">Age</string>
    <string name="years">years</string>
    <string name="null_daily_task">Set a goal for yourself today!</string>
    <string name="update_the_data">update the data</string>
    <string name="today_statistics">Todays statistics</string>
    <string name="number_of_repetions">Number of repetitions performed: </string>
    <string name="number_of_approaches_completed">Number of approaches completed: </string>
    <string name="it_remains_to_execute">It remains to execute: </string>
    <string name="cal_burned">Calories burned: </string>
    <string name="how_many_reps_to_complete">How many reps to complete: </string>
    <string name="how_many_app_to_complete">How many approaches need to be completed: </string>
    <string name="how_many_reps_do_you_need_to_do_in_a_day">How many reps do you need to do in a day?</string>
    <string name="how_many_sets_do_you_want_to_complete_this_day">How many sets do you want to complete this day?</string>
    <string name="empty_fields">The fields must not be empty!</string>
    <string name="less_than_3">The number of repetitions must be greater than 3!</string>
    <string name="reps_more_2">The number of sets must be greater than 2!</string>
</resources>