<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">

            <item
                android:title="Navigation">

            <menu>

                <item
                    android:id="@+id/menu_nav_create"
                    android:icon="@drawable/ic_baseline_emoji_people_24"
                    android:title="@string/create_exercise"
                    android:checked="true" />
                <item
                    android:id="@+id/menu_nav_event"
                    android:icon="@drawable/ic_baseline_event_24"
                    android:title="@string/create_event" />

                <item
                    android:id="@+id/menu_nav_start_run"
                    android:icon="@drawable/ic__icon_run"
                    android:title="@string/string_start_run" />

            </menu>

        </item>

    </group>

    <group
        android:checkableBehavior="single">

        <item
            android:title="Other">

            <menu>

                <item
                    android:title="@string/edit_profile"
                    android:id="@+id/menu_nav_settings"
                    android:icon="@drawable/ic_baseline_edit_24"/>

            </menu>

        </item>

    </group>

</menu>