<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    tools:context=".Main.fragments.createExec.FragmentCreateExec">

    <ImageView
        android:id="@+id/btn_exit"
        style="@style/def_btn_exit_style"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_baseline_close_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/green_neon_color" />

    <TextView
        android:id="@+id/textView3"
        android:text="@string/create_exercise"
        app:layout_constraintBottom_toBottomOf="@+id/btn_exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_exit"
        style="@style/main_header_text_for_fragment" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/def_margin"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="@dimen/def_margin"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/exercise_name"
            android:textColorHint="@color/white"
            app:boxBackgroundColor="@color/color_main_gray"
            app:boxBackgroundMode="filled"
            app:boxCornerRadiusTopEnd="@dimen/corner_in_input_layout"
            app:boxCornerRadiusTopStart="@dimen/corner_in_input_layout"
            app:boxStrokeColor="@color/green_neon_color"
            app:boxStrokeWidthFocused="2dp"
            app:hintTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inp_exec_name"
                android:maxLines="1"
                style="@style/none_cursor"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/small_text"
            android:layout_marginTop="@dimen/def_margin"
            android:text="@string/how_many_reps_do_you_want_to_complete_this_day" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputNeonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:hint="@string/number_of_repetitions"
            app:boxStrokeErrorColor="@color/color_gray"
            app:hintTextColor="@color/green_neon_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inp_exec_rep_of_set"
                android:inputType="number"
                android:maxLength="5"
                style="@style/none_cursor" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/small_text"
            android:layout_marginTop="@dimen/def_margin"
            android:text="@string/how_many_sets_do_you_need_to_complete" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputNeonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:hint="@string/number_of_approaches"
            app:boxStrokeErrorColor="@color/color_gray"
            app:hintTextColor="@color/green_neon_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inp_exec_numb_of_touch"
                android:inputType="number"
                style="@style/none_cursor"
                android:maxLength="5"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            style="@style/style_divider"
            android:layout_marginTop="@dimen/medium_margin" />

        <TextView
            android:id="@+id/test_color"
            style="@style/style_create_exec_main"
            android:layout_marginTop="@dimen/def_margin"
            android:text="@string/choose_the_color_you_need" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/open_sheet_color"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_color"
                android:textColor="@color/green_neon_color"
                android:textSize="12sp"
                app:cornerRadius="@dimen/def_corner_radius"
                app:strokeColor="@color/green_neon_color" />

            <ImageView
                android:id="@+id/chose_color_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:src="@drawable/ic_circle" />

        </FrameLayout>

        <TextView
            style="@style/style_create_exec_main"
            android:layout_marginTop="@dimen/def_margin"
            android:text="@string/choose_image_for_the_icon" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/open_sheet_icon"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_icon"
                android:textColor="@color/green_neon_color"
                android:textSize="12sp"
                app:cornerRadius="@dimen/def_corner_radius"
                app:strokeColor="@color/green_neon_color" />

            <ImageView
                android:id="@+id/chose_exec_icon"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="end|center"
                android:src="@drawable/ic_question_mark"
                app:tint="@color/white" />

        </FrameLayout>

        <View
            style="@style/style_divider"
            android:layout_marginTop="@dimen/medium_margin" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/def_margin">

            <TextView
                style="@style/small_text"
                android:layout_gravity="start|center"
                android:text="Do you want to see your icon?" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/look"
                android:textColor="@color/green_neon_color"
                android:textSize="12sp" />

        </FrameLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_create_exercise"
        android:text="@string/create_exec"
        app:backgroundTint="@color/color_main_gray"
        app:cornerRadius="@dimen/corner_in_input_layout"
        android:layout_margin="@dimen/def_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        style="@style/btn_save_style" />

</androidx.constraintlayout.widget.ConstraintLayout>