<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/btn_close_bottom"
        style="@style/def_btn_exit_style"
        android:src="@drawable/ic_baseline_close_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        style="@style/main_header_text_for_fragment"
        android:text="Updating data"
        app:layout_constraintBottom_toBottomOf="@+id/btn_close_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_close_bottom" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/def_margin"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <TextView
            style="@style/small_text"
            android:layout_marginTop="@dimen/def_margin"
            android:text="@string/how_many_reps_have_you_done_in_the_current_set" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputNeonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:hint="@string/number_of_repetitions"
            app:boxStrokeErrorColor="@color/color_gray"
            app:hintTextColor="@color/green_neon_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inp_exec_rep_of_set_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="5"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save_change"
            style="@style/btn_save_style"
            android:text="@string/save"
            android:layout_marginTop="@dimen/def_margin"
            app:cornerRadius="@dimen/corner_in_input_layout"
            android:layout_marginBottom="@dimen/medium_margin"
            android:backgroundTint="@color/color_main_gray"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>